display list product

--- a/LocBDS/Views/Shared/_Layout.cshtml
+++ b/LocBDS/Views/Shared/_Layout.cshtml
@@ -64,7 +64,8 @@
                         </div>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
-                    <a style="color:white" href="" class="btn btn-success px-3 d-none d-lg-flex">Trang Quản Trị</a>
+                    @* <a style="color:white" href="" class="btn btn-success px-3 d-none d-lg-flex">Trang Quản Trị</a> *@
+                    <partial name="_LoginPartial" />
                 </div>
             </nav>
         </div>
