--- a/LocBDS/Views/Home/GetDetail.cshtml
+++ b/LocBDS/Views/Home/GetDetail.cshtml
@@ -11,10 +11,10 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TypeId)
+            @Html.DisplayNameFor(model => model.CategoryId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TypeId)
+            @Html.DisplayFor(model => model.CategoryId)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.TypeName)
