--- a/LocBDS/Views/_ViewImports.cshtml
+++ b/LocBDS/Views/_ViewImports.cshtml
@@ -1,3 +1,8 @@
 ﻿@using LocBDS
 @using LocBDS.Models
+
+@using X.PagedList
+@using X.PagedList.Mvc.Core
+@using X.PagedList.Mvc.Core.Fluent
+@using X.PagedList.Web.Common
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
