--- a/LocBDS/Views/Shared/_Layout.cshtml
+++ b/LocBDS/Views/Shared/_Layout.cshtml
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/LocBDS.styles.css" asp-append-version="true" />
+    <!-- SweetAlert CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10">
+
 </head>
 <body>
     <header>
@@ -69,6 +72,19 @@
                 </div>
             </nav>
         </div>
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="https://lh4.googleusercontent.com/-Z56dFQCom3k/Wg0ESIJeigI/AAAAAAAABSY/IswIakEUwy88ugFri2lUt0MTf34nI0m3gCLcBGAs/s1600/dd.jpg" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="https://lh4.googleusercontent.com/-Z56dFQCom3k/Wg0ESIJeigI/AAAAAAAABSY/IswIakEUwy88ugFri2lUt0MTf34nI0m3gCLcBGAs/s1600/dd.jpg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="https://lh4.googleusercontent.com/-Z56dFQCom3k/Wg0ESIJeigI/AAAAAAAABSY/IswIakEUwy88ugFri2lUt0MTf34nI0m3gCLcBGAs/s1600/dd.jpg" alt="Third slide">
+                </div>
+            </div>
+        </div>
         <!-- Navbar End -->
     </header>
     <div class="container">
@@ -85,6 +101,8 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <!-- SweetAlert JS -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
