--- a/LocBDS/Views/Home/Upload.cshtml
+++ b/LocBDS/Views/Home/Upload.cshtml
@@ -10,6 +10,8 @@
     <input type="submit" value="Upload" />
 }
 
+
+<h2>qweqweqweasdjhaskjdhaskjdhaskjdh</h2>
 @if (ViewBag.Message != null)
 {
     <p>@ViewBag.Message</p>
